--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 /* Общий блок для хедера */
 .header {
-  background-color: #007bff; /* Синий фон, как у кнопок */
+  background-color: #a0a0a0; /* Синий фон, как у кнопок */
   /* color: rgb(0, 0, 0); */ /* Белый текст */
   padding: 10px 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Легкая тень для разделения от содержимого */
@@ -16,6 +16,7 @@
 
 /* Кнопки навигации */
 .header__link {
+  margin-left: 10px;
   text-decoration: none; /* Убираем подчеркивание ссылок */
   color: white; /* Белый цвет текста */
   font-size: 16px;
@@ -26,11 +27,11 @@
 }
 
 .header__link:hover {
-  background-color: #0056b3; /* Темно-синий при наведении */
+  background-color: #007bff; /* Темно-синий при наведении */
   transform: scale(1.05); /* Масштабирование при наведении */
 }
 
 /* Активная кнопка */
 .header__link--active {
-  background-color: #0056b3; /* Темно-синий для активной ссылки */
+  background-color: #007bff; /* Темно-синий для активной ссылки */
 }
