--- a/src/components/_popup.css
+++ b/src/components/_popup.css
@@ -1,89 +1,90 @@
-/* Общий блок для попапа */
 .popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Попап поверх других элементов */
+  z-index: 1000;
 }
 
-/* Форма внутри попапа */
 .popup__form {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
   width: 300px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Добавляем тень для более современного вида */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Заголовок попапа */
 .popup__title {
   margin-bottom: 15px;
   font-size: 18px;
   font-weight: bold;
-  color: #333; /* Темно-серый цвет текста */
+  color: #333;
 }
 
-/* Лейблы для полей ввода */
 .popup__label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #555; /* Светло-серый цвет текста */
+  color: #555;
 }
 
-/* Поля ввода */
-.popup__input {
+.popup__input,
+.popup__select {
   display: block;
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ddd; /* Светлая граница */
+  border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 14px;
   box-sizing: border-box;
 }
 
-/* Блок с кнопками */
-.popup__buttons {
-  display: flex;
-  gap: 10px; /* Отступ между кнопками */
-  justify-content: flex-end; /* Выравнивание кнопок справа */
+.popup__input--date {
+  /* Стили для поля ввода даты */
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
-/* Кнопка "Отправить" */
+.popup__buttons {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
+
 .popup__submit {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #007bff; /* Синий цвет */
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Плавный переход цвета */
+  transition: background-color 0.3s ease;
 }
 
 .popup__submit:hover {
-  background-color: #0056b3; /* Темно-синий при наведении */
+  background-color: #0056b3;
 }
 
-/* Кнопка "Отмена" */
 .popup__cancel {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #dc3545; /* Красный цвет */
+  background-color: #dc3545;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Плавный переход цвета */
+  transition: background-color 0.3s ease;
 }
 
 .popup__cancel:hover {
-  background-color: #bd2130; /* Темно-красный при наведении */
+  background-color: #bd2130;
 }
