--- a/src/components/popups/popups.css
+++ b/src/components/popups/popups.css
@@ -88,3 +88,15 @@
 .popup__cancel:hover {
   background-color: #bd2130;
 }
+
+.popup__success-message {
+  color: green;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.popup__error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
+}
